<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PhinconAttendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="welcome_to_login_text">Welcome to Login</string>
    <string name="please_fill_text"><![CDATA[Please fill username & password to login your app account]]></string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="don_t_have_an_account_text">Don\'t have an account? Please do</string>
    <string name="create_your_account_text">Create your account</string>
    <string name="please_fill_signup_text"><![CDATA[Please fill fullname, username & password to register in to the app]]></string>
    <string name="fullname_text">Fullname</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="already_have_an_account_text">Already have an account? Please do</string>
    <string name="forgot_password_title_text">Forgot password</string>
    <string name="please_fill_reset_text"><![CDATA[Please fill username, password & new password to reset your account]]></string>
    <string name="no_ktp_text">No. KTP</string>
    <string name="your_attendance_text">Your Attendance</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="location_text">Location</string>
    <string name="alamat_text">Address</string>
    <string name="nama_tempat_text">Place</string>
    <string name="attendance_history_text">Attendance History</string>
    <string name="occupation_text">Occupation</string>
    <string name="general_text">GENERAL</string>
    <string name="change_password_text">Change Password</string>
    <string name="tab_1">Day</string>
    <string name="tab_2">Week</string>
    <string name="tab_3">Month</string>
    <string name="tab_4">Year</string>
    <string name="logs_text">Logs</string>
    <string name="day_text">Day</string>
    <string name="week_text">Week</string>
    <string name="month_text">Month</string>
    <string name="year_text">Year</string>
    <string name="check_in_text">CHECK IN</string>
    <string name="check_out_text">CHECK OUT</string>
</resources>