<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.HistoryActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="319dp"
        android:layout_height="319dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="-140dp"
        android:background="@drawable/round_bg"
        android:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_to_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="18dp"
        android:text="@string/attendance_history_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/avenir_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBg"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/shape_white"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to_login_text"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="25dp"
        android:layout_height="26dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/baseline_notifications_24"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_to_login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toEndOf="@+id/welcome_to_login_text"
        app:layout_constraintTop_toTopOf="@+id/welcome_to_login_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/logs_text"
        android:textColor="#042C5C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="@+id/imageBg"
        app:layout_constraintTop_toTopOf="@+id/imageBg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/renstra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageBg"
        tools:ignore="VisualLintBounds">

        <Button
            android:id="@+id/btnDay"
            android:layout_width="89dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/avenir_black"
            android:text="@string/day_text"
            android:textColor="#77869E"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnWeek"
            android:layout_width="89dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/avenir_black"
            android:text="@string/week_text"
            android:textColor="#77869E"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDay"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnMonth"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/avenir_black"
            android:text="@string/month_text"
            android:textColor="#77869E"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnWeek"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnYear"
            android:layout_width="89dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/avenir_black"
            android:text="@string/year_text"
            android:textColor="#77869E"
            android:textSize="13sp"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btnMonth"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/renstra"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageBg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/renstra"
            app:layout_constraintVertical_bias="0.02" />
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/bottom_nav_color_icon_selector"
        app:itemTextColor="@color/bottom_nav_color_icon_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>