<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.ProfileActivity">

    <ImageView
        android:id="@+id/imageBg"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:background="@drawable/rectangle_bg"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="472dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/general_text"
        android:textColor="#77869E"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/general">

        <ImageView
            android:id="@+id/no_ktp_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/no_karyawan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/avenir_black"
            android:text="@string/no_ktp_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/no_karyawan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/no_ktp_text"
            android:textSize="11sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ImageView
            android:id="@+id/alamat_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/alamat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/avenir_black"
            android:text="@string/alamat_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/alamat_text"
            android:textSize="11sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ImageView
            android:id="@+id/change_pass_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/change_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/avenir_black"
            android:text="@string/change_password_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/change_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/change_password_text"
            android:textSize="11sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/viewPager"
        android:layout_width="352dp"
        android:layout_height="300dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/shape_white"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="200dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toTopOf="@+id/viewPager"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/user_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/fullname_text"
        android:layout_marginTop="18dp"
        android:textColor="#042C5C"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/user_img"
        app:layout_constraintStart_toStartOf="@+id/user_img"
        app:layout_constraintTop_toBottomOf="@+id/user_img" />

    <TextView
        android:id="@+id/user_occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_roman"
        android:text="@string/occupation_text"
        android:layout_marginTop="14dp"
        android:textColor="#77869E"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/user_img"
        app:layout_constraintStart_toStartOf="@+id/user_img"
        app:layout_constraintTop_toBottomOf="@+id/user_fullname" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="25dp"
        android:layout_height="26dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="319dp"
        android:layout_height="319dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="-140dp"
        android:background="@drawable/round_bg"
        android:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/title_profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/bottom_nav_color_icon_selector"
        app:itemTextColor="@color/bottom_nav_color_icon_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>