<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".authenticationPage.LoginActivity">

    <ImageView
        android:layout_width="319dp"
        android:layout_height="319dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="-140dp"
        android:background="@drawable/round_bg"
        android:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_to_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:layout_marginStart="18dp"
        android:text="@string/welcome_to_login_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/please_fill_text"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/please_fill_text"
        android:textColor="@color/white"
        android:fontFamily="@font/avenir_roman"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome_to_login_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to_login_text" />

    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:layout_width="365dp"
        android:layout_height="580dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_fill_text"
        app:layout_constraintVertical_bias="1.0"
        app:optRoundCardBackgroundColor="#FFFFFF"
        app:optRoundCardCornerRadius="25dp"
        app:optRoundCardElevation="10dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardRightBottomCorner="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="47dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/usernameText"
                android:textColor="#80000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/emailTextView"
                app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                tools:ignore="MissingConstraints">

                <com.example.phinconattendance.customViews.UsernameText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:fontFamily="@font/avenir_roman"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/passwordText"
                android:textColor="#80000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/emailTextView"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_roman"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
                tools:ignore="MissingConstraints">

                <com.example.phinconattendance.customViews.PasswordText
                    android:id="@+id/passwordEditText"
                    android:layout_width="304dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/avenir_roman"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/forgot_password_text"
                android:textColor="#0062CD"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

            <com.example.phinconattendance.customViews.LoginButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_roman"
                app:layout_constraintBottom_toTopOf="@+id/tv_noaccount"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout" />

            <TextView
                android:id="@+id/tv_noaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/don_t_have_an_account_text"
                android:textColor="#8F8F8F"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signUpButton"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="@+id/loginButton" />

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/avenir_roman"
                android:text="@string/sign_up_text"
                android:textColor="#0062CD"
                app:layout_constraintBottom_toBottomOf="@+id/tv_noaccount"
                app:layout_constraintEnd_toEndOf="@+id/loginButton"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="300dp"
                android:visibility="gone"
                android:foregroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.github.captain_miao.optroundcardview.OptRoundCardView>

</androidx.constraintlayout.widget.ConstraintLayout>